[gd_scene load_steps=2 format=3 uid="uid://countdown123"]

[ext_resource type="Script" path="res://scripts/ui/transitions/rhythm_countdown.gd" id="1_countdown"]

[node name="RhythmCountdown" type="CanvasLayer"]
process_mode = 3
layer = 50
script = ExtResource("1_countdown")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.06, 0.95)

[node name="CountLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 100)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 180
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.7, 0.75, 0.85, 1)
theme_override_font_sizes/font_size = 32
text = "Get Ready!"
horizontal_alignment = 1
vertical_alignment = 1
